# casper-py-client

./: README.md  casper_rpc_client.py  casper_sse_client.py  pyproject.toml
src/casper_py_client/: __main__.py  casper_client.py
src/casper_py_client/services/: logging_conf.py  rpcs.py  sse.py
tests/: test_casper_client.py
